fix: prevented layout break when password exceeds 26 characters

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,9 @@ body {
 
 /* Include the password input and options */
 #container {
+    max-width: 450px;
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,37 +57,46 @@ body {
 
 /* Password input */
 #password-container {
+    width: 100%;
+    max-width: 400px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 1rem 0 0;
-    margin-bottom: 1rem;
+    padding: 8px 12px;
     overflow: hidden;
     white-space: nowrap;
     border: 1px solid var(--border-color);
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
     background-color: white;
 }
 
 /* Password input field */
 #password {
-    width: 80%;
-    padding: 20px 20px;
-    font-size: 1.2rem;
+
+    min-width: 0;
+    max-width: 100%;
+    padding: 8px 0px;
+    font-size: 18px;
     border: none;
     outline: none;
     white-space: nowrap;
+    box-sizing: border-box;
     overflow: hidden;
     text-overflow: ellipsis;
     color: var(--primary-color);
+    background-color: rgb(255, 255, 255);
+
 }
 
 /* Copy button */
 #copy-btn {
-    padding: 0.8rem 1rem;
-    font-size: 1.2rem;
+    padding: 0.6rem 0.8rem; 
+    flex-shrink: 0;                   /* Não permita que encolha */
+    max-width: 60px;
+    font-size: 1.1rem;  
     font-weight: 700;
+    box-sizing: border-box;
     border: none;
     border-radius: 10px;
     cursor: pointer;
